# LightController

./: CMakeLists.txt  LICENSE  README.md  TODO.md  main.cpp
applicationData/LightLibrary/Backup/: library.LClib  library_backup.LClib
applicationData/Projects/Backup/: Blank_old.LCproj  Keller_old.LCproj  Large Project_old.LCproj  new_test.LCproj
applicationData/fonts/: LICENCE
cmake/: Warnings.cmake
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  GLOBAL.cpp  GLOBAL.hpp  defines.hpp
src/backend/KeyboardInputHandler/: CMakeLists.txt  KeyboardInputHandler.cpp  KeyboardInputHandler.hpp
src/backend/Light/: CMakeLists.txt  Light.cpp  Light.hpp
src/backend/Light/ButtonColor/: ButtonColor.cpp  ButtonColor.hpp  CMakeLists.txt
src/backend/Light/ChannelFunction/: CMakeLists.txt  ChannelFunction.cpp  ChannelFunction.hpp
src/backend/Light/LightFileManager/: CMakeLists.txt  LightFileManager.cpp  LightFileManager.hpp
src/backend/Patch/: CMakeLists.txt  Patch.cpp  Patch.hpp
src/backend/Patch/PatchManager/: CMakeLists.txt  PatchManager.cpp  PatchManager.hpp
src/backend/Project/: CMakeLists.txt  Project.cpp  Project.hpp
src/backend/Project/ProjectManager/: CMakeLists.txt  ProjectManager.cpp  ProjectManager.hpp
src/backend/USB/: CMakeLists.txt  USB.cpp  USB.hpp
src/frontend/: BaseWindow.cpp  BaseWindow.hpp  CMakeLists.txt  MasterWindow.cpp  MasterWindow.hpp
src/frontend/ArrangeWindow/: ArrangeWindow.cpp  ArrangeWindow.hpp  ArrangeWindow_old.cpp  ArrangeWindow_old.hpp  CMakeLists.txt
src/frontend/ClearWindow/: CMakeLists.txt  ClearWindow.cpp  ClearWindow.hpp
src/frontend/HeaderWindow/: CMakeLists.txt  HeaderWindow.cpp  HeaderWindow.hpp
src/frontend/PatchWindow/: CMakeLists.txt  PatchWindow.cpp  PatchWindow.hpp
src/frontend/PatchWindow/LightInfoWindow/: CMakeLists.txt  LightInfoWindow.cpp  LightInfoWindow.hpp
src/frontend/PatchWindow/SelectLightWindow/: CMakeLists.txt  SelectLightWindow.cpp  SelectLightWindow.hpp
src/frontend/SettingsWindow/: CMakeLists.txt  SettingsWindow.cpp  SettingsWindow.hpp
src/frontend/SettingsWindow/LibraryManagerWindow/: CMakeLists.txt  LibraryManagerWindow.cpp  LibraryManagerWindow.hpp
src/frontend/SettingsWindow/LibraryManagerWindow/AddLightWindow/: AddLightWindow.cpp  AddLightWindow.hpp  CMakeLists.txt
src/frontend/SettingsWindow/LibraryManagerWindow/ListLightsWindow/: CMakeLists.txt  ListLightsWindow.cpp  ListLightsWindow.hpp
src/frontend/SettingsWindow/ProjectManagerWindow/: CMakeLists.txt  ProjectManagerWindow.cpp  ProjectManagerWindow.hpp
src/frontend/SettingsWindow/ProjectManagerWindow/CreateProjectWindow/: CMakeLists.txt  CreateProjectWindow.cpp  CreateProjectWindow.hpp
